[tool.poetry]
name = "hannah"
version = "0.0.1"
description = ""
authors = ["suganthsundar <suganthsundar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cached-property = "^1.5.2"
httpx = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
