[tool.poetry]
name = "hannah"
version = "0.0.9"
description = ""
authors = ["suganthsundar <suganthsundar@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/suganthsundar/hannah"
repository = "https://github.com/suganthsundar/hannah"

[tool.poetry.dependencies]
python = "^3.7"
cached-property = "^1.5.2"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
